--- a/09.html
+++ b/09.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        div {
+        #t1 {
             width: 250px;
             height: 250px;
             background-color: antiquewhite;
@@ -15,11 +15,25 @@
             overflow: auto;
             /*  auto는 글 길이에 맞추어 알아서 스타일이 설정되게끔?
                 스크롤바가 알아서 나오게끔 설정되는 것이고
-                scroll은 스크롤바가 무조건 선으로 나타나는 것이다 */
+                scroll은 스크롤바가 무조건 선으로 나타나는 것이다
+                hidden scroll auto */
+            border: 8px solid purple;
+            /* 두께 (굵기) 선의 종류 (solid dotted dashed double) 색상 */
+        }
+        #t2 {
+            width: 200px;
+            height: 100px;
+            margin-left: 50px;
+            margin-right: 50px;
+            /* margin:0 50px 0 50px; */
+            padding: 0 20px 0 20px;
+            overflow: auto;
+            border: 20px dotted rgb(38, 0, 255);
         }
     </style>
 </head>
 <body>
-    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nulla ipsum, hendrerit vel enim non, scelerisque dictum orci. Donec mollis semper urna vel euismod. Proin ac mauris ante. Nam condimentum finibus felis et rutrum. Vivamus varius odio in leo porta accumsan dapibus id eros. Ut tincidunt mollis ipsum, non mattis est. Suspendisse aliquet sed ex sed accumsan.</div>
+    <div id="t1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nulla ipsum, hendrerit vel enim non, scelerisque dictum orci. Donec mollis semper urna vel euismod. Proin ac mauris ante. Nam condimentum finibus felis et rutrum. Vivamus varius odio in leo porta accumsan dapibus id eros. Ut tincidunt mollis ipsum, non mattis est. Suspendisse aliquet sed ex sed accumsan.</div>
+    <div id="t2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nulla ipsum, hendrerit vel enim non, scelerisque dictum orci. Donec mollis semper urna vel euismod. Proin ac mauris ante. Nam condimentum finibus felis et rutrum. Vivamus varius odio in leo porta accumsan dapibus id eros. Ut tincidunt mollis ipsum, non mattis est. Suspendisse aliquet sed ex sed accumsan.</div>
 </body>
 </html>
