--- a/15.html
+++ b/15.html
@@ -8,8 +8,8 @@
 </head>
 <style>
     body{
-        background-image: url("imgs/backgroundimg.jpg"), url("imgs/bg.jpg");
-        background-size: 100% 500px;
+        background-image: url("imgs/bg2.jpg"),url("imgs/backgroundimg.jpg"), url("imgs/bg.jpg");
+        background-size: 100%;
         background-repeat: repeat-y;
         /* no-repear repeat-x repeat-y */
     }
