--- a/16.html
+++ b/16.html
@@ -10,8 +10,10 @@
             background-color: bisque;
             background-image: url("imgs/backgroundimg.jpg");
             background-repeat: no-repeat;
-            background-size: 100% 50px;
+            background-size: 100% 70px;
             background-attachment: fixed;
+            background-position: 50px 200px;
+            /* x축은 픽셀 단위만 가능하고 y축은 픽셀 단위, 퍼센트 단위 모두 가능 */
         }
     </style>
 </head>
