오마이갓 글자속성 너무너무 재밌어요

--- a/17.html
+++ b/17.html
@@ -7,10 +7,14 @@
     <title>Document</title>
     <style>
         .p1{
-            font-size: 32pt;
+            font-size: 16pt;
+            font-family: Arial;
         }
         .p2{
             font-size: 2em;
+            font-family: 'Times New Roman';
+            font-style: italic;
+            font-weight: bold;
         }
         .p3{
             font-size: xx-large;
