--- a/18.html
+++ b/18.html
@@ -20,6 +20,7 @@
         }
         .font_right{
             text-align: right;
+            /* block 태그만 가능해욥!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
         }
     </style>
 </head>
